command/src/main/antlr/net/whimxiqal/journey/command/.antlr/JourneyParser.java
// Generated from c:/Projects/journey/command/src/main/antlr/net/whimxiqal/journey/command/Journey.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class JourneyParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		ADMIN=1, BUILD=2, CACHE=3, CANCEL=4, CLEAR=5, COLON=6, DEBUG=7, FALSE=8, 
		INVALIDATE=9, JOURNEY=10, JOURNEY_TO=11, LIST_NETHER_PORTALS=12, LIST_WAYPOINTS=13, 
		PATH=14, PATHS=15, PLAYER=16, PORTALS=17, PUBLIC=18, RELOAD=19, RENAME=20, 
		SERVER=21, SET=22, SET_WAYPOINT=23, TRUE=24, UNSET=25, WAYPOINT=26, FLAG_ANIMATE=27, 
		FLAG_DIG=28, FLAG_DOOR=29, FLAG_FLY=30, FLAG_NAVIGATOR=31, FLAG_TIMEOUT=32, 
		OPEN_BRACE=33, CLOSED_BRACE=34, ID=35, SINGLE_QUOTE=36, DOUBLE_QUOTE=37, 
		WS=38;
	public static final int
		RULE_journey = 0, RULE_journeyto = 1, RULE_setwaypoint = 2, RULE_listwaypoints = 3, 
		RULE_listwaypointsMine = 4, RULE_listwaypointsPlayer = 5, RULE_waypoint = 6, 
		RULE_unsetWaypoint = 7, RULE_renameWaypoint = 8, RULE_publicWaypoint = 9, 
		RULE_player = 10, RULE_playerWaypoint = 11, RULE_server = 12, RULE_serverSetWaypoint = 13, 
		RULE_serverListWaypoints = 14, RULE_serverWaypoint = 15, RULE_serverUnsetWaypoint = 16, 
		RULE_serverRenameWaypoint = 17, RULE_admin = 18, RULE_debug = 19, RULE_cache = 20, 
		RULE_cachePortals = 21, RULE_cachePaths = 22, RULE_listNetherPortals = 23, 
		RULE_cancel = 24, RULE_journeytoTarget = 25, RULE_flagSet = 26, RULE_timeoutFlag = 27, 
		RULE_animateFlag = 28, RULE_flyFlag = 29, RULE_doorFlag = 30, RULE_digFlag = 31, 
		RULE_navigatorFlag = 32, RULE_identifier = 33, RULE_ident = 34;
	private static String[] makeRuleNames() {
		return new String[] {
			"journey", "journeyto", "setwaypoint", "listwaypoints", "listwaypointsMine", 
			"listwaypointsPlayer", "waypoint", "unsetWaypoint", "renameWaypoint", 
			"publicWaypoint", "player", "playerWaypoint", "server", "serverSetWaypoint", 
			"serverListWaypoints", "serverWaypoint", "serverUnsetWaypoint", "serverRenameWaypoint", 
			"admin", "debug", "cache", "cachePortals", "cachePaths", "listNetherPortals", 
			"cancel", "journeytoTarget", "flagSet", "timeoutFlag", "animateFlag", 
			"flyFlag", "doorFlag", "digFlag", "navigatorFlag", "identifier", "ident"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'admin'", "'build'", "'cache'", "'cancel'", "'clear'", "':'", 
			"'debug'", "'false'", "'invalidate'", "'journey'", "'journeyto'", "'listnetherportals'", 
			"'listwaypoints'", "'path'", "'paths'", "'player'", "'portals'", "'public'", 
			"'reload'", "'rename'", "'server'", "'set'", "'setwaypoint'", "'true'", 
			"'unset'", "'waypoint'", "'-animate'", "'-dig'", "'-door'", "'-fly'", 
			"'-navigator'", "'-timeout'", "'{'", "'}'", null, "'''", "'\"'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "ADMIN", "BUILD", "CACHE", "CANCEL", "CLEAR", "COLON", "DEBUG", 
			"FALSE", "INVALIDATE", "JOURNEY", "JOURNEY_TO", "LIST_NETHER_PORTALS", 
			"LIST_WAYPOINTS", "PATH", "PATHS", "PLAYER", "PORTALS", "PUBLIC", "RELOAD", 
			"RENAME", "SERVER", "SET", "SET_WAYPOINT", "TRUE", "UNSET", "WAYPOINT", 
			"FLAG_ANIMATE", "FLAG_DIG", "FLAG_DOOR", "FLAG_FLY", "FLAG_NAVIGATOR", 
			"FLAG_TIMEOUT", "OPEN_BRACE", "CLOSED_BRACE", "ID", "SINGLE_QUOTE", "DOUBLE_QUOTE", 
			"WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Journey.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public JourneyParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class JourneyContext extends ParserRuleContext {
		public TerminalNode JOURNEY() { return getToken(JourneyParser.JOURNEY, 0); }
		public TerminalNode EOF() { return getToken(JourneyParser.EOF, 0); }
		public SetwaypointContext setwaypoint() {
			return getRuleContext(SetwaypointContext.class,0);
		}
		public ListwaypointsContext listwaypoints() {
			return getRuleContext(ListwaypointsContext.class,0);
		}
		public WaypointContext waypoint() {
			return getRuleContext(WaypointContext.class,0);
		}
		public PlayerContext player() {
			return getRuleContext(PlayerContext.class,0);
		}
		public ServerContext server() {
			return getRuleContext(ServerContext.class,0);
		}
		public AdminContext admin() {
			return getRuleContext(AdminContext.class,0);
		}
		public CancelContext cancel() {
			return getRuleContext(CancelContext.class,0);
		}
		public JourneyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_journey; }
	}

	public final JourneyContext journey() throws RecognitionException {
		JourneyContext _localctx = new JourneyContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_journey);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(70);
			match(JOURNEY);
			setState(78);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case SET_WAYPOINT:
				{
				setState(71);
				setwaypoint();
				}
				break;
			case LIST_WAYPOINTS:
				{
				setState(72);
				listwaypoints();
				}
				break;
			case WAYPOINT:
				{
				setState(73);
				waypoint();
				}
				break;
			case PLAYER:
				{
				setState(74);
				player();
				}
				break;
			case SERVER:
				{
				setState(75);
				server();
				}
				break;
			case ADMIN:
				{
				setState(76);
				admin();
				}
				break;
			case CANCEL:
				{
				setState(77);
				cancel();
				}
				break;
			case EOF:
				break;
			default:
				break;
			}
			setState(80);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class JourneytoContext extends ParserRuleContext {
		public TerminalNode JOURNEY_TO() { return getToken(JourneyParser.JOURNEY_TO, 0); }
		public TerminalNode EOF() { return getToken(JourneyParser.EOF, 0); }
		public JourneytoTargetContext journeytoTarget() {
			return getRuleContext(JourneytoTargetContext.class,0);
		}
		public JourneytoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_journeyto; }
	}

	public final JourneytoContext journeyto() throws RecognitionException {
		JourneytoContext _localctx = new JourneytoContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_journeyto);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(82);
			match(JOURNEY_TO);
			setState(84);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 240652222398L) != 0)) {
				{
				setState(83);
				journeytoTarget();
				}
			}

			setState(86);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SetwaypointContext extends ParserRuleContext {
		public IdentifierContext name;
		public TerminalNode SET_WAYPOINT() { return getToken(JourneyParser.SET_WAYPOINT, 0); }
		public List<IdentifierContext> identifier() {
			return getRuleContexts(IdentifierContext.class);
		}
		public IdentifierContext identifier(int i) {
			return getRuleContext(IdentifierContext.class,i);
		}
		public SetwaypointContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_setwaypoint; }
	}

	public final SetwaypointContext setwaypoint() throws RecognitionException {
		SetwaypointContext _localctx = new SetwaypointContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_setwaypoint);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(88);
			match(SET_WAYPOINT);
			setState(90); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(89);
				((SetwaypointContext)_localctx).name = identifier();
				}
				}
				setState(92); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 240652222398L) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ListwaypointsContext extends ParserRuleContext {
		public TerminalNode LIST_WAYPOINTS() { return getToken(JourneyParser.LIST_WAYPOINTS, 0); }
		public ListwaypointsMineContext listwaypointsMine() {
			return getRuleContext(ListwaypointsMineContext.class,0);
		}
		public ListwaypointsPlayerContext listwaypointsPlayer() {
			return getRuleContext(ListwaypointsPlayerContext.class,0);
		}
		public ListwaypointsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_listwaypoints; }
	}

	public final ListwaypointsContext listwaypoints() throws RecognitionException {
		ListwaypointsContext _localctx = new ListwaypointsContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_listwaypoints);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(94);
			match(LIST_WAYPOINTS);
			setState(97);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case EOF:
			case ID:
				{
				setState(95);
				listwaypointsMine();
				}
				break;
			case PLAYER:
				{
				setState(96);
				listwaypointsPlayer();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ListwaypointsMineContext extends ParserRuleContext {
		public Token page;
		public TerminalNode ID() { return getToken(JourneyParser.ID, 0); }
		public ListwaypointsMineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_listwaypointsMine; }
	}

	public final ListwaypointsMineContext listwaypointsMine() throws RecognitionException {
		ListwaypointsMineContext _localctx = new ListwaypointsMineContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_listwaypointsMine);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(100);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ID) {
				{
				setState(99);
				((ListwaypointsMineContext)_localctx).page = match(ID);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ListwaypointsPlayerContext extends ParserRuleContext {
		public IdentifierContext user;
		public Token page;
		public PlayerContext player() {
			return getRuleContext(PlayerContext.class,0);
		}
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public TerminalNode ID() { return getToken(JourneyParser.ID, 0); }
		public ListwaypointsPlayerContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_listwaypointsPlayer; }
	}

	public final ListwaypointsPlayerContext listwaypointsPlayer() throws RecognitionException {
		ListwaypointsPlayerContext _localctx = new ListwaypointsPlayerContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_listwaypointsPlayer);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(102);
			player();
			setState(103);
			((ListwaypointsPlayerContext)_localctx).user = identifier();
			setState(105);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ID) {
				{
				setState(104);
				((ListwaypointsPlayerContext)_localctx).page = match(ID);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class WaypointContext extends ParserRuleContext {
		public IdentifierContext name;
		public TerminalNode WAYPOINT() { return getToken(JourneyParser.WAYPOINT, 0); }
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public UnsetWaypointContext unsetWaypoint() {
			return getRuleContext(UnsetWaypointContext.class,0);
		}
		public RenameWaypointContext renameWaypoint() {
			return getRuleContext(RenameWaypointContext.class,0);
		}
		public PublicWaypointContext publicWaypoint() {
			return getRuleContext(PublicWaypointContext.class,0);
		}
		public FlagSetContext flagSet() {
			return getRuleContext(FlagSetContext.class,0);
		}
		public WaypointContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_waypoint; }
	}

	public final WaypointContext waypoint() throws RecognitionException {
		WaypointContext _localctx = new WaypointContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_waypoint);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(107);
			match(WAYPOINT);
			setState(108);
			((WaypointContext)_localctx).name = identifier();
			setState(113);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case UNSET:
				{
				setState(109);
				unsetWaypoint();
				}
				break;
			case RENAME:
				{
				setState(110);
				renameWaypoint();
				}
				break;
			case PUBLIC:
				{
				setState(111);
				publicWaypoint();
				}
				break;
			case FLAG_ANIMATE:
			case FLAG_DIG:
			case FLAG_DOOR:
			case FLAG_FLY:
			case FLAG_NAVIGATOR:
			case FLAG_TIMEOUT:
				{
				setState(112);
				flagSet();
				}
				break;
			case EOF:
				break;
			default:
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class UnsetWaypointContext extends ParserRuleContext {
		public TerminalNode UNSET() { return getToken(JourneyParser.UNSET, 0); }
		public UnsetWaypointContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_unsetWaypoint; }
	}

	public final UnsetWaypointContext unsetWaypoint() throws RecognitionException {
		UnsetWaypointContext _localctx = new UnsetWaypointContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_unsetWaypoint);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(115);
			match(UNSET);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class RenameWaypointContext extends ParserRuleContext {
		public IdentifierContext newname;
		public TerminalNode RENAME() { return getToken(JourneyParser.RENAME, 0); }
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public RenameWaypointContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_renameWaypoint; }
	}

	public final RenameWaypointContext renameWaypoint() throws RecognitionException {
		RenameWaypointContext _localctx = new RenameWaypointContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_renameWaypoint);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(117);
			match(RENAME);
			setState(118);
			((RenameWaypointContext)_localctx).newname = identifier();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PublicWaypointContext extends ParserRuleContext {
		public TerminalNode PUBLIC() { return getToken(JourneyParser.PUBLIC, 0); }
		public TerminalNode TRUE() { return getToken(JourneyParser.TRUE, 0); }
		public TerminalNode FALSE() { return getToken(JourneyParser.FALSE, 0); }
		public PublicWaypointContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_publicWaypoint; }
	}

	public final PublicWaypointContext publicWaypoint() throws RecognitionException {
		PublicWaypointContext _localctx = new PublicWaypointContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_publicWaypoint);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(120);
			match(PUBLIC);
			setState(122);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==FALSE || _la==TRUE) {
				{
				setState(121);
				_la = _input.LA(1);
				if ( !(_la==FALSE || _la==TRUE) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PlayerContext extends ParserRuleContext {
		public IdentifierContext user;
		public TerminalNode PLAYER() { return getToken(JourneyParser.PLAYER, 0); }
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public PlayerWaypointContext playerWaypoint() {
			return getRuleContext(PlayerWaypointContext.class,0);
		}
		public PlayerContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_player; }
	}

	public final PlayerContext player() throws RecognitionException {
		PlayerContext _localctx = new PlayerContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_player);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(124);
			match(PLAYER);
			setState(125);
			((PlayerContext)_localctx).user = identifier();
			setState(127);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
			case 1:
				{
				setState(126);
				playerWaypoint();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PlayerWaypointContext extends ParserRuleContext {
		public IdentifierContext name;
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public PlayerWaypointContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_playerWaypoint; }
	}

	public final PlayerWaypointContext playerWaypoint() throws RecognitionException {
		PlayerWaypointContext _localctx = new PlayerWaypointContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_playerWaypoint);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(129);
			((PlayerWaypointContext)_localctx).name = identifier();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ServerContext extends ParserRuleContext {
		public TerminalNode SERVER() { return getToken(JourneyParser.SERVER, 0); }
		public ServerSetWaypointContext serverSetWaypoint() {
			return getRuleContext(ServerSetWaypointContext.class,0);
		}
		public ServerListWaypointsContext serverListWaypoints() {
			return getRuleContext(ServerListWaypointsContext.class,0);
		}
		public ServerWaypointContext serverWaypoint() {
			return getRuleContext(ServerWaypointContext.class,0);
		}
		public ServerContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_server; }
	}

	public final ServerContext server() throws RecognitionException {
		ServerContext _localctx = new ServerContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_server);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(131);
			match(SERVER);
			setState(135);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case SET_WAYPOINT:
				{
				setState(132);
				serverSetWaypoint();
				}
				break;
			case LIST_WAYPOINTS:
				{
				setState(133);
				serverListWaypoints();
				}
				break;
			case WAYPOINT:
				{
				setState(134);
				serverWaypoint();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ServerSetWaypointContext extends ParserRuleContext {
		public IdentifierContext name;
		public TerminalNode SET_WAYPOINT() { return getToken(JourneyParser.SET_WAYPOINT, 0); }
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public ServerSetWaypointContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_serverSetWaypoint; }
	}

	public final ServerSetWaypointContext serverSetWaypoint() throws RecognitionException {
		ServerSetWaypointContext _localctx = new ServerSetWaypointContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_serverSetWaypoint);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(137);
			match(SET_WAYPOINT);
			setState(138);
			((ServerSetWaypointContext)_localctx).name = identifier();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ServerListWaypointsContext extends ParserRuleContext {
		public Token page;
		public TerminalNode LIST_WAYPOINTS() { return getToken(JourneyParser.LIST_WAYPOINTS, 0); }
		public TerminalNode ID() { return getToken(JourneyParser.ID, 0); }
		public ServerListWaypointsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_serverListWaypoints; }
	}

	public final ServerListWaypointsContext serverListWaypoints() throws RecognitionException {
		ServerListWaypointsContext _localctx = new ServerListWaypointsContext(_ctx, getState());
		enterRule(_localctx, 28, RULE_serverListWaypoints);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(140);
			match(LIST_WAYPOINTS);
			setState(142);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ID) {
				{
				setState(141);
				((ServerListWaypointsContext)_localctx).page = match(ID);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ServerWaypointContext extends ParserRuleContext {
		public IdentifierContext name;
		public TerminalNode WAYPOINT() { return getToken(JourneyParser.WAYPOINT, 0); }
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public ServerUnsetWaypointContext serverUnsetWaypoint() {
			return getRuleContext(ServerUnsetWaypointContext.class,0);
		}
		public ServerRenameWaypointContext serverRenameWaypoint() {
			return getRuleContext(ServerRenameWaypointContext.class,0);
		}
		public FlagSetContext flagSet() {
			return getRuleContext(FlagSetContext.class,0);
		}
		public ServerWaypointContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_serverWaypoint; }
	}

	public final ServerWaypointContext serverWaypoint() throws RecognitionException {
		ServerWaypointContext _localctx = new ServerWaypointContext(_ctx, getState());
		enterRule(_localctx, 30, RULE_serverWaypoint);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(144);
			match(WAYPOINT);
			setState(145);
			((ServerWaypointContext)_localctx).name = identifier();
			setState(149);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case UNSET:
				{
				setState(146);
				serverUnsetWaypoint();
				}
				break;
			case RENAME:
				{
				setState(147);
				serverRenameWaypoint();
				}
				break;
			case FLAG_ANIMATE:
			case FLAG_DIG:
			case FLAG_DOOR:
			case FLAG_FLY:
			case FLAG_NAVIGATOR:
			case FLAG_TIMEOUT:
				{
				setState(148);
				flagSet();
				}
				break;
			case EOF:
				break;
			default:
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
